Modify content in L03-Photosynthesis

--- a/L03-Photosynthesis/L03-3-Canopy_Photosynthesis.ipynb
+++ b/L03-Photosynthesis/L03-3-Canopy_Photosynthesis.ipynb
@@ -228,6 +228,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@system Photosynthesis begin\n",
+    "    α:    photochemical_efficiency    => 0.05 ~ preserve(parameter)\n",
+    "    Amax: maximum_photosynthetic_rate => 25   ~ preserve(parameter, u\"μmol/m^2/s\")\n",
+    "    Rd:   dark_respiration            => 1.0  ~ preserve(parameter, u\"μmol/m^2/s\")\n",
+    "\n",
+    "    Ag: gross_photosynthesis ~ hold\n",
+    "\n",
+    "    An(Ag, Rd): net_photosynthesis => Ag - Rd ~ track(u\"μmol/m^2/s\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -20419,6 +20436,21 @@
    "metadata": {},
    "source": [
     "#### Light response of leaf and canopy photosynthesis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@system PhotosynthesisRH(Photosynthesis, Controller) begin\n",
+    "    I: irradiance => 0 ~ preserve(parameter, u\"μmol/m^2/s\")\n",
+    "\n",
+    "    Ag(I, α, Amax): gross_photosynthesis => begin\n",
+    "        (α*I*Amax)/(α*I+Amax)\n",
+    "    end ~ track(u\"μmol/m^2/s\")\n",
+    "end"
    ]
   },
   {
